@@ -9,6 +9,8 @@
    option (LP: #1083715)
  - make install of puppet configurable (LP: #1090205) [Craig Tracey]
  - support omnibus installer for chef [Anatoliy Dobrosynets]
+ - fix bug where cloud-config in user-data could not modify system_info
+   settings (LP: #1090482)
 0.7.1:
  - sysvinit: fix missing dependency in cloud-init job for RHEL 5.6 
  - config-drive: map hostname to local-hostname (LP: #1061964)
